Update QuoteControllerFunctionalTest.java